@@ -3,7 +3,7 @@ author           = Sven Kirmess <sven.kirmess@kzone.ch>
 
 license          = ISC
 copyright_holder = Sven Kirmess
-copyright_year   = 2021-2022
+copyright_year   = 2021-2023
 
 [Git::Checkout]
 repo = https://github.com/skirmess/perl-dzil-bundle.git
